small message under auth button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
             <li>Profit!</li>
         </ol>
         <button type="button">Generate token</button>
-        <button type="button">Authenticate</button>
+        <div>
+            <button type="button">Authenticate</button>
+            <p>works even after page reload!</p>
+        </div>
         <div id="display"></div>
     </div>
 </body>
